ref: make config conflicts not suck